--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ before_install:
 
 install:
 # Build dependencies
+- sudo apt install freeglut3 freeglut3-dev
 - stack --no-terminal --install-ghc test --only-dependencies
 
 script:
